# hands_on_gtsam

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
hand_on_gtsam/include/: CalibratableCameraProjectionFactor.h  SFMdata.h
hand_on_gtsam/scripts/: 2.2.creating_a_factor_graph.cpp  CameraResectioning.cpp  SFMExample_Calibratable.cpp  SelfCalibrationExample.cpp  SelfRigCalibrationExample.cpp  SelfRigCalibrationExample.cpp.backup  SelfRigCalibrationExample_k3.cpp
